Fixed dark mode colors

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 #app {
-  background-color: var(--surface);
   height: 100vh;
   display: flex;
   align-items: center;
